# frida-mcp-native

./: .gitignore  ANALYSIS_RMS_vs_MCP.md  README.md  pyproject.toml
src/frida_mcp_native/: __init__.py  server.py
