[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frida-mcp-native"
version = "0.1.0"
description = "MCP server for Frida using native CLI - works with Android 16 and Frida 17+"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jorge" }
]
keywords = ["frida", "mcp", "android", "ios", "reverse-engineering", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.5.0",
]

[project.scripts]
frida-mcp-native = "frida_mcp_native.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frida_mcp_native"]
